--- a/wup_3.Rmd
+++ b/wup_3.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Alcohol vs Seat choice"
-author: "Your Name"
+author: "Paulina Martinez"
 date: "Fall 2020"
 output: html_document
 ---
@@ -16,6 +16,10 @@ davisdata <- read.csv(file="UCDavis.csv")
 ```
 ## Our Goal is to answer this question Is there a difference between the alcohol consumed between the row
 ## you choose to sit in??
+
+
+$H_0$: There is no difference between the average number of drinks imbibed between people conditioned on the row they sit in.
+$H_A$: The average number drinks is different between at least two rows.   
 
 ## Now with ggplot - first select the basic data
 
